Revert "Fixed spacing issue with account dropdown menu by configuring the dropdown to auto position itself and enabled the renderInPlace flag"
Reverting this commit because it introduced scrolling bug.

This reverts commit 866211f9b27f842b5073a3e7627c9919011d4dfb.

--- a/app/styles/layouts/main.css
+++ b/app/styles/layouts/main.css
@@ -196,7 +196,7 @@
     flex-direction: column;
     justify-content: space-between;
     flex-grow: 1;
-    overflow: visible;
+    overflow-y: auto;
 }
 
 /* Global search
